# leadle-os

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: README.md  deal-pipeline-leakage.md  deal-pipeline-rotting.md  deal-rotting.md  fathom-crm-gap.md  hubspot-dedupe-find.md  icp-corrector.md  inbound-lead-analysis.md  inbound-lead-scoring.md  inbound-perf.md  lead-pipeline-leakage.md  lead-pipeline-rotting.md  lead-rotting.md  lost-deals.md  outbound-campaign-perf.md  outbound-lead-analysis.md  outbound-lead-scoring.md  render-client-report.md  render-dashboard.md  source-attribution.md
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: __init__.py
analytics/: __init__.py  _periods.py  deal_pipeline_leakage.py  deal_pipeline_rotting.py  deal_rotting.py  fathom_crm_gap.py  hubspot_dedupe_find.py  icp_corrector.py  inbound_lead_analysis.py  inbound_lead_scoring.py  inbound_perf.py  lead_pipeline_leakage.py  lead_pipeline_rotting.py  lead_rotting.py  lost_deals.py  outbound_campaign_perf.py  outbound_lead_analysis.py  outbound_lead_scoring.py  source_attribution.py
config/: README.md  client_report_layout.yaml  client_report_rubric.yaml  clients.yaml  dashboard_layout.yaml  dashboard_rules.yaml  dashboard_targets.yaml  dashboard_window_prompt.yaml  dashboard_windows.yaml  hubspot_pipeline.yaml  inbound_scoring.yaml  outbound_scoring.yaml
connectors/: __init__.py
connectors/aimfox/: __init__.py  cli.py  fetch.py
connectors/fathom/: __init__.py
connectors/google_sheets/: authorize.py  fetch.py
connectors/hubspot/: __init__.py  cli.py  leads.py
connectors/instantly/: __init__.py  cli.py  fetch.py
connectors/lemlist/: __init__.py
dashboard/: __init__.py  render.py
dashboard/agents/: _client.py  _voice.md  fathom_gap.py  forward_motion.py  funnel_leak.py  hygiene.py
dashboard/client/: compute.py  constants.py  model.py  render.py  snapshots.py
dashboard/compute/: page1_revenue.py  page2_activity.py  page3_actions.py  page4_outreach.py  shared.py  windows.py
dashboard/templates/: README.md  (+7 more)
identity/: __init__.py
leadle_os_mcp/: __init__.py
schemas/: 0007_client_dashboard_snapshots.sql  README.md
smoke/: __init__.py
tests/: __init__.py  test_agents_client.py  test_compute_page1.py  test_compute_page2.py  test_compute_page3.py  test_compute_page4.py  test_compute_shared.py  test_render.py  test_templates.py  test_windows.py
(+74 files in other folders)
